objects/CADragNDrop__DragnDropNewfeature__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Adding New feature in app</description>
    <fields>
        <fullName>CADragNDrop__actiondelete__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Delete</description>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__actiondownload__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Download</description>
        <label>Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__actionedit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Edit</description>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__actionview__c</fullName>
        <defaultValue>true</defaultValue>
        <description>View</description>
        <label>View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__buttonattachfile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Attach File</description>
        <label>Attach File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__buttondeletemultipleattachments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Delete Multiple Attachments</description>
        <label>Delete Multiple Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__buttondownloadandattachments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Download Multiple Attachments</description>
        <label>Download Multiple Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__buttonnewnote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>New Note</description>
        <label>New Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__buttonnotesandattachments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>for all selection</description>
        <label>All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__buttonviewall__c</fullName>
        <defaultValue>true</defaultValue>
        <description>View All</description>
        <label>View All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__columncreatedby__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Column Created By</description>
        <label>Created By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__columnlastmodify__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Column Last Modified</description>
        <label>Last Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__columnrelatedto__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Column Related To</description>
        <label>Related To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__columntitle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ColumnTitle</description>
        <label>Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADragNDrop__columntype__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Column Type</description>
        <label>Type</label>
        <type>Checkbox</type>
    </fields>
    <label>DragnDropNewfeature</label>
</CustomObject>